# imessage

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  go.mod
.github/workflows/: ci.yml  docker.yml
cmd/bbctl/: auth.go  main.go  register.go  stop.go
cmd/mautrix-imessage/: login_cli.go  main.go
dev/: windows-dev-env.bat
docs/: apple-auth-research.md  cloudkit-guide.md  group-id-research.md
pkg/connector/: attachment_retrier.go  capabilities.go  carddav_crypto.go  chatdb.go  client.go  cloud_backfill_store.go  cloud_backfill_store_test.go  command_carddav.go  commands.go  config.go  connector.go  contact_merge.go  dbmeta.go  example-config.yaml  external_carddav.go  facetime.go  findmy.go  findmydevices.go  findmyfriends.go  group_identity.go  identity_store.go  login.go  recycle_bin_hints.go  shared_profile.go  shared_profile_test.go  sharedstreams.go  statuskit_commands.go  sync_controller.go  urlpreview.go
pkg/rustpushgo/: Cargo.toml  rustpushgo.go  rustpushgo.h
pkg/rustpushgo/src/: anisette.rs  lib.rs  local_config.rs  statuskitgo.rs
prompts/: research-apple-auth-tokens.md  research-group-id-prompt.md
rustpush/cloudkit-derive/src/: lib.rs
rustpush/open-absinthe/: Cargo.toml  README.md
rustpush/open-absinthe/src/: nac.rs
rustpush/src/: auth.rs
rustpush/src/ids/: user.rs
rustpush/src/imessage/: aps_client.rs  cloud_messages.rs  messages.rs
scripts/: bootstrap-linux.sh  install-beeper-linux.sh  install-beeper.sh  install-linux.sh  install.sh
tools/extract-key/: main.go
tools/extract-key-app/Sources/ExtractKeyApp/: ContentView.swift  HardwareExtractor.swift  Models.swift
tools/nac-relay/: main.go
tools/nac-relay-app/Sources/NACRelayApp/: AppDelegate.swift  PopoverView.swift
