[package]
name = "rustpushgo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]
name = "rustpushgo"

[features]
# hardware-key enables open-absinthe (x86 NAC emulator via unicorn-engine).
# Required on Linux; unnecessary on macOS (native AAAbsintheContext is used).
# The Makefile passes --features hardware-key on Linux only.
default = []
hardware-key = ["rustpush/macos-validation-data"]
# Enables CloudKit avid (Live Photo MOV) download paths when the linked
# rustpush fork exposes the required API and record fields.
rustpush-avid-download = []

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uniffi = { version = "0.25.0", features = ["tokio"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
rustpush = { path = "../../third_party/rustpush-upstream", default-features = false, features = ["macos-validation-data"] }
keystore = { path = "../../third_party/rustpush-upstream/keystore" }
plist = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
sha2 = "0.10"
sha1 = "0.10"
thiserror = "1.0.47"
async-trait = "0.1.73"
base64 = "0.21"
hex = "0.4"
serde_json = "1.0"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
icloud_auth = { path = "../../third_party/rustpush-upstream/apple-private-apis/icloud-auth", default-features = false }
omnisette = { path = "../../third_party/rustpush-upstream/apple-private-apis/omnisette", default-features = false }
nac-validation = { path = "../../nac-validation" }
# Enable the `native-nac` feature on open-absinthe so its `ValidationCtx`
# delegates to nac-validation (AAAbsintheContext) instead of running the
# unicorn XNU emulator. This preserves the bridge's "Local NAC" behavior
# (native macOS NAC generation, no relay, no emulator) while keeping the
# OSConfig impl as upstream's `rustpush::macos::MacOSConfig`. Cargo unifies
# this dep with rustpush's own path dep on open-absinthe; features are
# additive so the `native-nac` flag propagates into both users.
open-absinthe = { path = "../../third_party/rustpush-upstream/open-absinthe", features = ["native-nac"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
icloud_auth = { path = "../../third_party/rustpush-upstream/apple-private-apis/icloud-auth", default-features = false, features = ["remote-anisette-v3"] }
omnisette = { path = "../../third_party/rustpush-upstream/apple-private-apis/omnisette", default-features = false, features = ["remote-anisette-v3"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
cc = "1.0"
