[package]
name = "open-absinthe"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
unicorn-engine = "2.1.5"
goblin = "0.10"
ureq = "2.9"
sha1 = "0.10"
rand = "0.8"
log = "0.4"
base64 = "0.21"
serde_json = "1.0"

[dev-dependencies]
plist = "1.7"
ureq = { version = "2.9", features = ["native-tls"] }
native-tls = "0.2"

[features]
serde = []
